--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,8 +35,22 @@ h5,
 h6 {
   font-family: "Comfortaa", sans-serif;
   font-weight: 600;
-  color: var(--ifm-color-primary-darkest);
+  color: var(--ifm-color-primary-dark);
+  text-decoration: none !important;
 }
+h1.title {
+  position: relative;
+  padding-inline-start: 1rem;
+}
+h1.title::before {
+  content: "";
+  position: absolute;
+  inset: 0 auto 0 0; /* pin to the start edge */
+  width: 4px;
+  background: linear-gradient(180deg, var(--bs-primary), var(--bs-secondary));
+  border-radius: 2px;
+}
+
 /* Add trailing line after h1 headings */
 h2::before {
   content: "";
@@ -52,6 +66,15 @@ h3 {
   font-size: 1.8rem;
 }
 
+a {
+  font-weight: 600;
+  text-decoration: underline var(--ifm-color-primary-lightest) dotted;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 /* Increase h4 heading size */
 h4 {
   font-size: 1.4rem;
@@ -63,17 +86,20 @@ h4 {
   font-weight: 600;
   color: var(--navbar-link-color) !important;
   font-size: 1.8rem;
+  text-decoration: none !important;
 }
 
 .navbar__item {
   font-family: "Comfortaa", sans-serif;
   font-weight: 600;
   color: var(--navbar-link-color);
+  text-decoration: none !important;
 }
 
 .navbar__logo {
   width: 40px;
   height: 40px;
+  text-decoration: none !important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
