--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,6 +35,10 @@ a:hover {
   text-decoration: underline;
 }
 
+.card {
+  text-decoration: none !important;
+}
+
 /* Apply Conformaa font to heading titles */
 h1,
 h2,
@@ -50,10 +54,6 @@ h6 {
 h1 {
   font-size: 2.7rem;
 }
-h2 {
-  font-size: 2.2rem;
-}
-
 /* Add trailing line after h1 headings */
 h2::before {
   content: "";
